@@ -1,5 +1,8 @@
 2013-12-31  Allen D. Ball  <ball@10-0-1-2.lan>
 
+	* Moved all path calculations from Service to (internal to)
+	Device.
+
 	* src/main/java/iprotium/upnp/ControlServlet.java,
 	src/main/java/iprotium/upnp/EventServlet.java,
 	src/main/java/iprotium/upnp/SCPDServlet.java:
